# WBC-quadruped-DOB

./: .gitmodules  README.md
DogBotV4/ROS/src/dogbot_control/config/: dogbot_controllers.yaml
DogBotV4/ROS/src/dogbot_control/launch/: controllers.launch
DogBotV4/ROS/src/dogbot_description/urdf/: dogbot.sdf  dogbot.urdf  dogbot.xacro  xacro_to_sdf.sh
DogBotV4/ROS/src/dogbot_gazebo/launch/: config_dogbot.rviz  dog.launch  gztest.launch  rviz.launch
dogbot_controller/include/dogbot_model/: estimator.h  quadruped.h  quadruped_control.h
dogbot_controller/include/dogbot_model/alglib/: diffequations.cpp
dogbot_controller/include/towr/initialization/: gait_generator.h  quadruped_gait_generator.h
dogbot_controller/include/towr/models/: robot_model.h
dogbot_controller/include/towr/models/examples/: dogbot_model.h
dogbot_controller/src/: estimator.cpp  main.cpp  quadruped.cpp  quadruped_control.cpp
dogbot_controller/src/alglib/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  linalg.cpp  optimization.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
dogbot_controller/src/towr/: quadruped_gait_generator.cc  robot_model.cc
force_plugin/: CMakeLists.txt  package.xml
force_plugin/src/: force_plugin.cpp
